# modbus_local_gateway

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  hacs.json  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  requirements_all.txt  requirements_dev.txt  setup.cfg  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: codeql.yml  hacs-validate.yml  hassfest-validate.yml  home-assistant-dev.yml  linting.yml  release-drafter.yml  sonar.yml  tests.yml
config/: configuration.yaml  secrets.yaml
custom_components/modbus_local_gateway/: __init__.py  binary_sensor.py  config_flow.py  const.py  context.py  conversion.py  coordinator.py  helpers.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  tcp_client.py  text.py  transaction.py
custom_components/modbus_local_gateway/device_configs/: 7M_24.yaml  7M_38.yaml  Dimplex-SI-11TU.yaml  Fröling_BWP300PV.yaml  Husdata_H60.yaml  ME31-AXAX404.yaml  MIC-2500TL-X.yaml  MIN-6000TL-XH.yaml  MOD-10KTL3-XH.yaml  MOD-6000TL-X.yaml  Pichler-LG150-LG250.yaml  Pichler-LG350-LG450.yaml  SDM230.yaml  SDM630.yaml  SPH-3600TL-BL_UP.yaml  Salda_RIS_MCB.yaml  Schneider_ATV312.yaml  Schneider_ATV312_expert.yaml  Test.yaml  Uponor-smatrix-base-pro-x147.yaml  Varmann Qtherm.yaml  Waveshare_30_POE.yaml  Waveshare_RTU_Relay_D.yaml  __init__.py
custom_components/modbus_local_gateway/devices/: 7M_24.yaml  7M_38.yaml  MIC-2500TL-X.yaml  MIN-6000TL-XH.yaml  MOD-6000TL-X.yaml  SDM230.yaml  SDM630.yaml  __init__.py  test_device.yaml
custom_components/modbus_local_gateway/entity_management/: __init__.py  base.py  const.py  device_loader.py  modbus_device_info.py
custom_components/modbus_local_gateway/sensor_types/: __init__.py  base.py  const.py  conversion.py  device_loader.py  modbus_device_info.py
custom_components/modbus_local_gateway/translations/: en.json
docs/: ATV312_modbus_local_gateway_audit.md
modbus_test_client/: salda_check_nc.py  test.py
modbus_test_server/: __main__.py
modbus_test_server/devices/: Husdata_H60.json  Varmann_Qtherm.json  Waveshare_RTU_Relay_D.json
scripts/: setup  setup.sh  startup.sh
tests/: conftest.py  test_binary_sensor.py  test_client.py  test_config_flow.py  test_conversion.py  test_coordinator.py  test_device_loader.py  test_entity_management_base.py  test_example.py  test_init.py  test_modbus_device_info.py  test_number.py  test_select.py  test_sensor.py  test_switch.py  test_text.py  test_transaction.py
