[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "modbus_test_*/*",
    "conftest.py",
]

[tool.coverage.paths]
source = [
    "custom_components/",
    "tests/"
]

[tool.isort]
profile = "black"

[tool.tox]
requires = ["tox>=4.24.1"]
env_list = ["lint", "3.14"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]
deps = ["-r requirements_dev.txt"]

[tool.tox.gh-actions]
python = '''
    3.14: 3.14, lint
'''

[tool.setuptools_scm]

[build-system]
requires = ["setuptools >= 77.0,< 82.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus_local_gateway"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
description = "Modbus Local Gateway is a module which allows integration with Modbus devices in Home Assistant."
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Tim Laing"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries"
]
keywords = ["modbus", "local", "gateway", "homeassistant", "integration"]


[project.urls]
homepage = "https://github.com/timlaing/modbus_local_gateway"
download = "https://github.com/timlaing/modbus_local_gateway/releases/latest"
bug_tracker = "https://github.com/timlaing/modbus_local_gateway/issues"
repository = "https://github.com/timlaing/modbus_local_gateway"

[tool.setuptools]
packages = [
    "custom_components.modbus_local_gateway",
    "custom_components.modbus_local_gateway.devices",
    "custom_components.modbus_local_gateway.device_configs",
    "custom_components.modbus_local_gateway.entity_management",
    "custom_components.modbus_local_gateway.sensor_types",
]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements_dev.txt"]}}
